# safer-dreamcord

./: .env.example  .gitignore  POLICY.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  release.yml
extension/: README.md  build.js  manifest.json  package.json
extension/src/: build.js
extension/src/background/: background.js
extension/src/module/: dwebhook.js
extension/src/popup/: popup.css  popup.html  popup.js
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  biome.json  package.json  wrangler.toml
server/src/: index.js  lib.rs  main.rs
server/src/module/: dmessage.js  performance.js
server/src/modules/: dmessage.rs  logger.rs  mod.rs  performance.rs  request.rs  types.rs
