[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["shimaenaga <admin@shimaenaga.dev>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6" }
worker-macros = { version = "0.6" }
libm = "0.2.15"
serde = "1.0.228"
serde_json = "1.0.145"
chrono = "0.4.42"
indoc = "2.0.7"
scraper = "0.24.0"
once_cell = "1.21.3"


[profile.release]
lto = true
strip = true
codegen-units = 1
