[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["shimaenaga <admin@shimaenaga.dev>"]

[dependencies]
actix-web = "4"
libm = "0.2.15"
serde = "1.0.228"
serde_json = "1.0.145"
chrono = "0.4.42"
indoc = "2.0.7"
scraper = "0.24.0"
once_cell = "1.21.3"
actix-cors = "0.7.1"
reqwest = { version = "0.12", features = ["json", "gzip"] }
dotenv = "0.15.0"
tokio = {version = "1.48.0", features=["macros"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-actix-web = "0.7.19"

[profile.release]
lto = true
strip = true
codegen-units = 1
