[package]
name = "server"
version = "2.2.0" 
edition = "2021"
authors = ["shimaenaga <admin@shimaenaga.dev>"]

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
libm = "0.2.15"
serde = "1.0.228"
serde_json = "1.0.145"
chrono = "0.4.42"
indoc = "2.0.7"
scraper = "0.24.0"
once_cell = "1.21.3"
actix-cors = "0.7.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
dotenv = "0.15.0"
tokio = {version = "1.48.0", features=["macros"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-actix-web = "0.7.19"
anyhow = "1.0.100"

[profile.release]
lto = true
strip = true
codegen-units = 16
opt-level = 3
